# ht6

./: .env.example  .gitignore  README.md  WEBAPP.md  package-lock.json  package.json  start-demo.sh
.openai/: hosting.json
app/: client-config.ts  globals.css  launchpad.tsx  layout.tsx  page.tsx  providers.tsx
backend/: .env.example  README.md  pyproject.toml
backend/src/atlas_gemini_api/: __init__.py  config.py  dependencies.py  main.py  models.py
backend/src/atlas_gemini_api/routers/: account.py  ai.py  health.py  notes.py  runs.py
backend/src/praxis_api/: __init__.py  comparisons.py  config.py  db.py  freesolo.py  main.py  schemas.py  service.py
backend/src/praxis_api/migrations/: 001_initial.sql
backend/tests/: conftest.py  test_api.py  test_freesolo.py
backend/tests/fixtures/: qnx_session_v3.json
freesolo/: .gitignore  CONTRACT.md  HANDOFF.md  LAYERED_MODEL.md  README.md  TRAINING.md  TRAINING_RUNS.md  contract_checks.py  demo_message.txt  environment.py  praxis_contract.py  response_schema.py  system_prompt.txt
freesolo/configs/: opd.toml  rl.toml  sft.toml
freesolo/data/: qnx_calibration_anchors.json  seeds.jsonl  train.jsonl
freesolo/dataset/: train.jsonl
freesolo/examples/: demo_case.json  test.jsonl  (+1 more)
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
gemini-ui-assistant/: .env.example  .gitignore  README.md
qnx/: .gitignore  AI_ARCHITECTURE.md  METRICS.md  Makefile  PROTOCOL.md  README.md  WEBAPP_INTEGRATION.md  device.env.example  env.sh
tests/: rendered-html.test.mjs
therapist-copilot/: .env.example  .gitignore  README.md  requirements.txt
(+79 files in other folders)
