[project]
name = "atlas-gemini-api"
version = "0.1.0"
description = "FastAPI API with Auth0, MongoDB Atlas, and Gemini"
requires-python = ">=3.12"
dependencies = [
    "auth0-fastapi-api>=1.0.0b7",
    "fastapi>=0.139.2",
    "google-genai[aiohttp]>=2.12.1",
    "pydantic-settings>=2.14.2",
    "pymongo>=4.17.0",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
